# obstacle_detector_suite

src/obstacle_converter/: CMakeLists.txt  package.xml
src/obstacle_converter/include/: include.txt
src/obstacle_converter/msg/: Zonotopes.msg
src/obstacle_converter/src/: distance_calculator_node.cpp  obstacle_converter_node.cpp  synchronizer_node.cpp
src/obstacle_detector/: .gitignore
src/obstacle_detector/git-files/: config  index  packed-refs
src/obstacle_detector/git-files/objects/pack/: pack-811e53c6d5656637ac07ce97c21a3b3ebf7f15b2.idx  pack-811e53c6d5656637ac07ce97c21a3b3ebf7f15b2.pack
src/obstacle_detector/git-files/refs/heads/: master
src/obstacle_detector/launch/: cartographer_visualization.launch  obstacle_detector.launch  visualization.launch
src/obstacle_detector/msg/: .CircleObstacle.msg.swp
src/obstacle_detector/resources/: obstacle_detector.rviz
src/obstacle_detector/src/: obstacle_tracker.cpp
